# dajare-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
detector/: Cargo.toml
detector/src/: lib.rs
detector/src/rulebase/: mod.rs
neologd/: make_ipadic.sh
src/: main.rs
