[package]
name = "dajare"
version = "0.1.0"
authors = ["sizumita <contact@sumidora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detector = { path = "./detector" }

[dependencies.tokio]
version = "1.12.0"
features = ["full"]
